Updated algorithms and models to run

--- a/notebooks/Homecred - Data cleaning.ipynb
+++ b/notebooks/Homecred - Data cleaning.ipynb
@@ -1565,17 +1565,17 @@
      "output_type": "stream",
      "text": [
       "    VIF Factor                                           features\n",
-      "0     6.231952                  DAYS_REGISTRATION_AMT_GOODS_PRICE\n",
-      "1    14.066711                       DAYS_EMPLOYED_FLAG_EMP_PHONE\n",
-      "2   607.548441                  FLAG_MOBIL_REG_CITY_NOT_LIVE_CITY\n",
-      "3     7.269886  REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE\n",
-      "4    12.084883                 DAYS_BIRTH_HOUR_APPR_PROCESS_START\n",
+      "0   166.296465             DAYS_LAST_PHONE_CHANGE_AMT_GOODS_PRICE\n",
+      "1     7.418706       REGION_POPULATION_RELATIVE_DAYS_REGISTRATION\n",
+      "2     5.489649           DAYS_REGISTRATION_DAYS_LAST_PHONE_CHANGE\n",
+      "3   216.770125                 DAYS_EMPLOYED_REGION_RATING_CLIENT\n",
+      "4    43.583797                         DAYS_BIRTH_DAYS_ID_PUBLISH\n",
       "..         ...                                                ...\n",
-      "71    1.418104                           NAME_INCOME_TYPE_Working\n",
-      "72  143.501814                           DAYS_BIRTH_DAYS_EMPLOYED\n",
-      "73   18.261148          DAYS_REGISTRATION_HOUR_APPR_PROCESS_START\n",
-      "74    5.011916             CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE\n",
-      "75   94.456923                              DAYS_BIRTH_AMT_CREDIT\n",
+      "71    7.575995                     FLAG_EMP_PHONE_FLAG_DOCUMENT_3\n",
+      "72   24.061344        REGION_RATING_CLIENT_W_CITY_FLAG_DOCUMENT_3\n",
+      "73  143.501814                           DAYS_BIRTH_DAYS_EMPLOYED\n",
+      "74  444.847695                    FLAG_EMP_PHONE_FLAG_CONT_MOBILE\n",
+      "75    7.269886  REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE\n",
       "\n",
       "[76 rows x 2 columns]\n"
      ]
@@ -1735,32 +1735,32 @@
     {
      "data": {
       "text/plain": [
-       "['DAYS_REGISTRATION_AMT_GOODS_PRICE',\n",
-       " 'REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE',\n",
-       " 'CNT_FAM_MEMBERS_REG_CITY_NOT_WORK_CITY',\n",
-       " 'CODE_GENDER_M',\n",
-       " 'DAYS_EMPLOYED_DAYS_LAST_PHONE_CHANGE',\n",
-       " 'REG_CITY_NOT_LIVE_CITY_FLAG_DOCUMENT_3',\n",
-       " 'REG_CITY_NOT_LIVE_CITY_AMT_ANNUITY',\n",
-       " 'REG_CITY_NOT_WORK_CITY_AMT_ANNUITY',\n",
-       " 'REGION_POPULATION_RELATIVE_DAYS_REGISTRATION',\n",
-       " 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE',\n",
-       " 'NAME_EDUCATION_TYPE_Secondary / secondary special',\n",
-       " 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED',\n",
-       " 'DAYS_EMPLOYED_AMT_INCOME_TOTAL',\n",
-       " 'REG_CITY_NOT_WORK_CITY_FLAG_DOCUMENT_3',\n",
-       " 'DAYS_EMPLOYED_DAYS_REGISTRATION',\n",
-       " 'FLAG_EMP_PHONE_FLAG_DOCUMENT_3',\n",
-       " 'DAYS_BIRTH_AMT_INCOME_TOTAL',\n",
+       "['REGION_POPULATION_RELATIVE_DAYS_REGISTRATION',\n",
        " 'DAYS_REGISTRATION_DAYS_LAST_PHONE_CHANGE',\n",
-       " 'DAYS_EMPLOYED_CNT_FAM_MEMBERS',\n",
-       " 'DAYS_ID_PUBLISH_AMT_GOODS_PRICE',\n",
-       " 'CNT_FAM_MEMBERS_REG_CITY_NOT_LIVE_CITY',\n",
+       " 'NAME_EDUCATION_TYPE_Secondary / secondary special',\n",
+       " 'REG_CITY_NOT_LIVE_CITY_AMT_ANNUITY',\n",
        " 'DAYS_LAST_PHONE_CHANGE_AMT_ANNUITY',\n",
+       " 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED',\n",
+       " 'CNT_FAM_MEMBERS_REG_CITY_NOT_LIVE_CITY',\n",
+       " 'DAYS_EMPLOYED_AMT_INCOME_TOTAL',\n",
+       " 'DAYS_BIRTH_AMT_INCOME_TOTAL',\n",
+       " 'DAYS_REGISTRATION_AMT_GOODS_PRICE',\n",
+       " 'DAYS_EMPLOYED_CNT_FAM_MEMBERS',\n",
+       " 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE',\n",
+       " 'DAYS_ID_PUBLISH_AMT_GOODS_PRICE',\n",
+       " 'REG_CITY_NOT_WORK_CITY_FLAG_DOCUMENT_3',\n",
+       " 'CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE',\n",
        " 'REGION_POPULATION_RELATIVE_DAYS_ID_PUBLISH',\n",
        " 'DAYS_EMPLOYED_AMT_ANNUITY',\n",
+       " 'DAYS_EMPLOYED_DAYS_LAST_PHONE_CHANGE',\n",
+       " 'CNT_FAM_MEMBERS_REG_CITY_NOT_WORK_CITY',\n",
+       " 'DAYS_EMPLOYED_DAYS_REGISTRATION',\n",
        " 'NAME_INCOME_TYPE_Working',\n",
-       " 'CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE']"
+       " 'REG_CITY_NOT_WORK_CITY_AMT_ANNUITY',\n",
+       " 'REG_CITY_NOT_LIVE_CITY_FLAG_DOCUMENT_3',\n",
+       " 'CODE_GENDER_M',\n",
+       " 'FLAG_EMP_PHONE_FLAG_DOCUMENT_3',\n",
+       " 'REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE']"
       ]
      },
      "execution_count": 58,
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1850,27 +1850,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create numpy array of SK_ID_CURR to later use for submission file\n",
-    "Customer_Id = test_df['SK_ID_CURR']"
+    "test_ids_df = test_df['SK_ID_CURR']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop ID column\n",
+    "test_df.drop(columns='SK_ID_CURR', inplace=True)\n",
+    "X_train.drop(columns='SK_ID_CURR', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# split the data into train and test datasets\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X_train, Y_train, test_size=0.3, random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(X_train, Y_train, test_size=0.3, random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1899,8 +1910,16 @@
     "x_test.to_csv(cleaned_folder+'x_test.csv', index=False)\n",
     "y_train.to_csv(cleaned_folder+'y_train.csv', index=False)\n",
     "y_test.to_csv(cleaned_folder+'y_test.csv', index=False)\n",
-    "test_df.to_csv(cleaned_folder+'test_df.csv', index=False)"
+    "test_df.to_csv(cleaned_folder+'test_df.csv', index=False)\n",
+    "test_ids_df.to_csv(cleaned_folder+'test_ids_df.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
