--- a/notebooks/Homecred - Data cleaning.ipynb
+++ b/notebooks/Homecred - Data cleaning.ipynb
@@ -262,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remove outliers"
+    "### Outlier removal"
    ]
   },
   {
@@ -394,81 +394,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Business Entity Type 3    78832\n",
-       "XNA                       64648\n",
-       "Self-employed             44332\n",
-       "Other                     19390\n",
-       "Medicine                  12909\n",
-       "Business Entity Type 2    12032\n",
-       "Government                11912\n",
-       "School                    10180\n",
-       "Trade: type 7              9134\n",
-       "Kindergarten               7918\n",
-       "Construction               7760\n",
-       "Business Entity Type 1     6871\n",
-       "Transport: type 4          6282\n",
-       "Trade: type 3              4070\n",
-       "Industry: type 9           3867\n",
-       "Industry: type 3           3767\n",
-       "Security                   3719\n",
-       "Housing                    3393\n",
-       "Military                   3164\n",
-       "Industry: type 11          3120\n",
-       "Bank                       2881\n",
-       "Police                     2782\n",
-       "Agriculture                2746\n",
-       "Transport: type 2          2652\n",
-       "Postal                     2451\n",
-       "Security Ministries        2315\n",
-       "Trade: type 2              2142\n",
-       "Restaurant                 2095\n",
-       "Services                   1877\n",
-       "University                 1548\n",
-       "Industry: type 7           1524\n",
-       "Transport: type 3          1361\n",
-       "Industry: type 1           1217\n",
-       "Electricity                1106\n",
-       "Hotel                      1100\n",
-       "Industry: type 4           1044\n",
-       "Trade: type 6               753\n",
-       "Industry: type 5            696\n",
-       "Insurance                   677\n",
-       "Telecom                     672\n",
-       "Emergency                   651\n",
-       "Industry: type 2            535\n",
-       "Advertising                 500\n",
-       "Realtor                     468\n",
-       "Industry: type 12           446\n",
-       "Culture                     440\n",
-       "Trade: type 1               412\n",
-       "Mobile                      362\n",
-       "Legal Services              358\n",
-       "Cleaning                    303\n",
-       "Transport: type 1           236\n",
-       "Industry: type 6            139\n",
-       "Industry: type 10           133\n",
-       "Religion                     97\n",
-       "Trade: type 4                78\n",
-       "Industry: type 13            73\n",
-       "Trade: type 5                58\n",
-       "Industry: type 8             27\n",
-       "Name: ORGANIZATION_TYPE, dtype: int64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "dataframe['ORGANIZATION_TYPE'].value_counts()"
+    "### Outlier removal"
    ]
   },
   {
@@ -507,10 +436,10 @@
     "# Create 'Other' category for categorical outliers\n",
     "threshold = 0.01\n",
     "dataframe = application_df\n",
-    "for col in dataframe[['ORGANIZATION_TYPE', 'NAME_INCOME_TYPE']]:\n",
+    "for col in dataframe[['ORGANIZATION_TYPE', 'OCCUPATION_TYPE', 'NAME_INCOME_TYPE']]:\n",
     "    value_counts = dataframe[col].value_counts(normalize=True)\n",
     "    below_threshold = value_counts[value_counts <= threshold].index.tolist()\n",
-    "    dataframe[col].replace(to_replace=below_threshold, value=\"Other\", inplace=True)"
+    "    dataframe[col].replace(to_replace=below_threshold, value=\"Other2\", inplace=True)"
    ]
   },
   {
