create basic & advanced notebooks

--- a/notebooks/Homecred - Exploratory analysis.ipynb
+++ b/notebooks/Homecred - Exploratory analysis.ipynb
@@ -2694,7 +2694,7 @@
     }
    ],
    "source": [
-    "# Look at availabletypes\n",
+    "# Look at available types\n",
     "test_df[variable].value_counts(normalize=True, dropna=False).sort_values(ascending=False)"
    ]
   },
@@ -2757,7 +2757,8 @@
     "Findings:\n",
     "- No missing data\n",
     "- The majority of customers either receive income from work, commercial associate or pensioner\n",
-    "- Of those categories, workers are most likely to experience payment difficculties, followed by commercial associates"
+    "- Of those categories, workers are most likely to experience payment difficulties. This is\n",
+    "- Low frequently occuring income types are better to be excluded to prevent an unequal negative impact resulting from limited data availability (i.e. Unemployed, Student, Businessman, Maternity leave)"
    ]
   },
   {
