--- a/notebooks/Homecred - ML ensemble - Advanced.ipynb
+++ b/notebooks/Homecred - ML ensemble - Advanced.ipynb
@@ -290,9 +290,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 selected features\n"
+     ]
+    }
+   ],
    "source": [
     "rf_feature_select = SelectFromModel(RandomForestClassifier(n_estimators=100))\n",
     "rf_feature_select.fit(x_train, y_train)\n",
@@ -304,16 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected features: ['REGION_POPULATION_RELATIVE_DAYS_REGISTRATION', 'DAYS_REGISTRATION_DAYS_LAST_PHONE_CHANGE', 'DAYS_LAST_PHONE_CHANGE_AMT_ANNUITY', 'REGION_POPULATION_RELATIVE_DAYS_EMPLOYED', 'DAYS_EMPLOYED_AMT_INCOME_TOTAL', 'DAYS_BIRTH_AMT_INCOME_TOTAL', 'DAYS_REGISTRATION_AMT_GOODS_PRICE', 'DAYS_EMPLOYED_CNT_FAM_MEMBERS', 'DAYS_ID_PUBLISH_DAYS_LAST_PHONE_CHANGE', 'DAYS_ID_PUBLISH_AMT_GOODS_PRICE', 'CNT_FAM_MEMBERS_DAYS_LAST_PHONE_CHANGE', 'REGION_POPULATION_RELATIVE_DAYS_ID_PUBLISH', 'DAYS_EMPLOYED_AMT_ANNUITY', 'DAYS_EMPLOYED_DAYS_LAST_PHONE_CHANGE', 'DAYS_EMPLOYED_DAYS_REGISTRATION', 'REGION_POPULATION_RELATIVE_DAYS_LAST_PHONE_CHANGE']\n"
+     ]
+    }
+   ],
    "source": [
     "print('Selected features:', rf_selected_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,28 +347,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will be using 'recall' as an evaluation metric for algorithm performance, because:\n",
-    "- The original dataset is unbalanced; most people don't have payment difficulties\n",
-    "- The objective of this analysis is to correctly identify customers with payment difficulties\n",
-    "\n",
-    "Recall = the number of correctly classified customers with payment difficulties = True Positives / (True Positives + False Negatives)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "classifiers = {'Gradient Boosting Classifier': GradientBoostingClassifier(),\n",
-    "               'Ada Boost Classifier': AdaBoostClassifier(),\n",
-    "               'Linear Discriminant Analyis': LinearDiscriminantAnalysis(),\n",
-    "               'GaussianNB': GaussianNB(),\n",
-    "               'BernoulliNB': BernoulliNB(),\n",
-    "               'KNN': KNeighborsClassifier(),\n",
+    "classifiers = {'KNN': KNeighborsClassifier(),\n",
     "               'Random Forest Classifier': RandomForestClassifier(),\n",
     "               'Decision Tree Classifier': DecisionTreeClassifier(),\n",
     "               'Logistic Regression': LogisticRegression()}"
@@ -360,19 +360,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variable distribution\n",
-    "application_train_df[variable].value_counts(normalize=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "8:5: E122 continuation line missing indentation or outdented\n",
+      "9:5: E122 continuation line missing indentation or outdented\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate strongest predicting algorithm in default setting\n",
     "base_score = 0\n",
@@ -381,10 +380,8 @@
     "    classify.fit(x_train, y_train)\n",
     "    predicting_y = classify.predict(x_test)\n",
     "    model_outcomes.append({\n",
-    "    'Algorithm': str(Name),\n",
-    "    'f1_score': str(met.f1_score(y_test, predicting_y))\n",
-    "    })\n",
-    "\n",
+    "                           'Algorithm': str(Name),\n",
+    "                           'f1_score': str(met.f1_score(y_test, predicting_y))})\n",
     "    if met.f1_score(y_test, predicting_y) > base_score:\n",
     "        # prediction = classify.predict(test_df)\n",
     "        base_score = met.f1_score(y_test, predicting_y)\n",
@@ -395,21 +392,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Algorithm</th>\n",
+       "      <th>f1_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gradient Boosting Classifier</td>\n",
+       "      <td>0.1891646414807178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ada Boost Classifier</td>\n",
+       "      <td>0.18504152596513646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.17854214319623665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Linear Discriminant Analyis</td>\n",
+       "      <td>0.1782727409541419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BernoulliNB</td>\n",
+       "      <td>0.17361925955897228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>GaussianNB</td>\n",
+       "      <td>0.17095610446550324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>0.14415359173960393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Decision Tree Classifier</td>\n",
+       "      <td>0.09675179384306766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Random Forest Classifier</td>\n",
+       "      <td>0.00031055900621118014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Algorithm                f1_score\n",
+       "0  Gradient Boosting Classifier      0.1891646414807178\n",
+       "1          Ada Boost Classifier     0.18504152596513646\n",
+       "8           Logistic Regression     0.17854214319623665\n",
+       "2   Linear Discriminant Analyis      0.1782727409541419\n",
+       "4                   BernoulliNB     0.17361925955897228\n",
+       "3                    GaussianNB     0.17095610446550324\n",
+       "5                           KNN     0.14415359173960393\n",
+       "7      Decision Tree Classifier     0.09675179384306766\n",
+       "6      Random Forest Classifier  0.00031055900621118014"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_scores = pd.DataFrame(model_outcomes, columns=['Algorithm', 'f1_score'])\n",
     "model_scores.sort_values(by=['f1_score'], ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qqq - don't use recall for model evaluation"
    ]
   },
   {
@@ -460,40 +541,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selected classifiers based on model performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "qqq - select classifiers that I know"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Select classifier algorithms to optimise\n",
-    "# NB: GaussianNB doesn't have any parameters to optimise\n",
-    "classifiers = {'Logistic_regression': {'model': LogisticRegression(solver='liblinear', multi_class='auto'),\n",
-    "                                       'params': {'C': [1, 10, 100, 1000],\n",
-    "                                                  'penalty': ['l1', 'l2'], }},\n",
-    "               'LinearDiscriminant': {'model': LinearDiscriminantAnalysis(solver='svd'),\n",
-    "                                      'params': {'tol': [0.0001, 0.0002, 0.0003]}},\n",
-    "               'BernoulliNB': {'model': BernoulliNB(),\n",
-    "                               'params': {'alpha': [0.01, 0.1, 0.5, 1.0, 10.0]}}}\n",
-    "\n",
     "scores = []\n",
     "for model_name, mp in classifiers.items():\n",
     "    grid = GridSearchCV(mp['model'],\n",
     "                        mp['params'],\n",
     "                        cv=10,\n",
-    "                        scoring='recall',\n",
+    "                        scoring='f1_score',\n",
     "                        return_train_score=False,\n",
     "                        n_jobs=-1)\n",
     "    grid.fit(x_train, y_train)\n",
@@ -502,14 +556,6 @@
     "        'best_score': grid.best_score_,\n",
     "        'best_params': grid.best_params_\n",
     "    })"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "model_scores = pd.DataFrame(model_outcomes, columns=['Algorithm', 'Recall_score'])\n",
-    "model_scores.sort_values(by=['Recall_score'], ascending=False)"
    ]
   },
   {
@@ -530,6 +576,15 @@
    "metadata": {},
    "source": [
     "**Result:** models perform slightly better than before parameter optimisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qqq"
    ]
   },
   {
