updated code separate notebooks

--- a/notebooks/Homecred - Exploratory analysis.ipynb
+++ b/notebooks/Homecred - Exploratory analysis.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Notebook objective\n",
-    "Explore the Home Credit Default Risk Kaggle dataset to understand the required data cleaning steps to predict defaulting customers.\n",
+    "Explore data for case study of a prediction model that can be used to evaluate loan repayment behaviour of currently excluded customers of formal financial services\n",
     "\n",
-    "https://www.kaggle.com/c/home-credit-default-risk/data"
+    "Data source: https://www.kaggle.com/c/home-credit-default-risk/data"
    ]
   },
   {
